release/1.4.5/VERSION.md
# 1.4.5

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.4.5```   |
| Release Time   | ```2012-12-19T22:00:00+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```pre-1.6```   |
| sha1   | ```3d8e55480977e32acd9844e545177e69a52f594b```   |
| size   | ```74091```   |
| total size  | ```49505710```  |
| url       | ```https://launchermeta.mojang.com/v1/packages/3d8e55480977e32acd9844e545177e69a52f594b/pre-1.6.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```7a8a963ababfec49406e1541d3a87198e50604e5```   |
| size   | ```4967927```   |
| url       | ```https://launcher.mojang.com/v1/objects/7a8a963ababfec49406e1541d3a87198e50604e5/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```c12fd88a8233d2c517dbc8196ba2ae855f4d36ea```   |
| size   | ```2047972```   |
| url       | ```https://launcher.mojang.com/v1/objects/c12fd88a8233d2c517dbc8196ba2ae855f4d36ea/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |