release/1.4.6/VERSION.md
# 1.4.6

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.4.6```   |
| Release Time   | ```2012-12-19T22:00:00+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```pre-1.6```   |
| sha1   | ```3d8e55480977e32acd9844e545177e69a52f594b```   |
| size   | ```74091```   |
| total size  | ```49505710```  |
| url       | ```https://launchermeta.mojang.com/v1/packages/3d8e55480977e32acd9844e545177e69a52f594b/pre-1.6.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```116758f41b32e8d1a71a4ad6236579acd724bca7```   |
| size   | ```5005686```   |
| url       | ```https://launcher.mojang.com/v1/objects/116758f41b32e8d1a71a4ad6236579acd724bca7/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```a0aeb5709af5f2c3058c1cf0dc6b110a7a61278c```   |
| size   | ```2061647```   |
| url       | ```https://launcher.mojang.com/v1/objects/a0aeb5709af5f2c3058c1cf0dc6b110a7a61278c/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |